plugins {
    id 'java'
    id "org.sonarqube" version "3.3"
    id 'org.springframework.boot' version "2.5.7"
    id 'io.spring.dependency-management' version "1.0.11.RELEASE"
}

sonarqube {
    properties {
        property "sonar.sourceEncoding", "UTF-8"
        property "sonar.projectKey", "tps-messaging-service"
        property "sonar.projectName", "tps-messaging-service"
        property "sonar.organization", "navit"
        property "sonar.host.url", "https://sonarcloud.io"
        property "sonar.project.monorepo.enabled", true
        property "sonar.login", System.getenv("SONAR_TOKEN")
    }
}

bootJar {
    archiveFileName = "app.jar"
}

dependencyManagement {
    imports {
        mavenBom 'org.springframework.cloud:spring-cloud-dependencies:2020.0.4'
    }
}

java.sourceCompatibility = JavaVersion.VERSION_17

test {
    useJUnitPlatform()
}

repositories {
    mavenLocal()
    mavenCentral()
}

dependencies {
    implementation 'no.nav.testnav.libs:servlet-core'
    implementation 'no.nav.testnav.libs:servlet-security'
    implementation 'no.nav.testnav.libs:data-transfer-objects'

    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap'

    implementation 'com.fasterxml.jackson.core:jackson-annotations'
    implementation 'com.fasterxml.jackson.core:jackson-databind'
    implementation 'com.ibm.mq:mq-jms-spring-boot-starter:2.5.5'
    implementation 'javax.xml.bind:jaxb-api'
    implementation 'com.sun.xml.bind:jaxb-core:2.3.0.1'
    implementation 'org.glassfish.jaxb:jaxb-runtime'

    implementation 'org.springframework.cloud:spring-cloud-starter-vault-config'
    implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'

    implementation 'ma.glasnost.orika:orika-core:1.5.4'
    implementation 'org.hibernate.validator:hibernate-validator'
    implementation 'org.aspectj:aspectjweaver:1.9.7'
    implementation 'io.micrometer:micrometer-registry-prometheus'

    implementation 'net.logstash.logback:logstash-logback-encoder:7.0.1'
    implementation 'org.springdoc:springdoc-openapi-ui:1.5.12'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    implementation 'org.projectlombok:lombok:1.18.22'
    annotationProcessor 'org.projectlombok:lombok:1.18.22'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.22'
}